# dxgate

./: .dockerignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/admin/: Cargo.toml
crates/admin/src/: lib.rs
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/app/tests/: e2e.rs
crates/controller/: Cargo.toml
crates/controller/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  identity.rs  lib.rs  matchers.rs
crates/proxy/: Cargo.toml
crates/proxy/src/: a2a.rs  lib.rs  llm.rs  mcp.rs  server.rs  state.rs
crates/proxy/src/server/: access_log.rs  auth.rs  context.rs  detect.rs  headers.rs  llm_flow.rs  mod.rs  policy.rs  routing.rs  trace.rs  upstream.rs
crates/proxy/tests/: a2a.rs  agent.rs  e2e.rs  grpc.rs  llm.rs  mcp.rs  performance.rs  sla.rs
crates/proxy/tests/support/: mod.rs
crates/xds/: Cargo.toml  build.rs
crates/xds/proto/cluster/v1/: cluster.pb.go  cluster.proto
crates/xds/proto/core/v1/: address.pb.go  address.proto  base.pb.go  base.proto  config_source.pb.go  config_source.proto  health_check.pb.go  health_check.proto
crates/xds/proto/endpoint/v1/: endpoint.pb.go  endpoint.proto  endpoint_components.pb.go  endpoint_components.proto
crates/xds/proto/extensions/filters/v1/http/router/: router.pb.go  router.proto
crates/xds/proto/extensions/filters/v1/network/http_connection_manager/: http_connection_manager.pb.go  http_connection_manager.proto
crates/xds/proto/extensions/transport_sockets/tls/v1/: tls.pb.go  tls.proto
crates/xds/proto/listener/v1/: listener.pb.go  listener.proto  listener_components.pb.go  listener_components.proto
crates/xds/proto/route/v1/: route.pb.go  route.proto  route_components.pb.go  route_components.proto
crates/xds/proto/service/discovery/v1/: ads.pb.go  ads.proto  ads_grpc.pb.go  discovery.pb.go  discovery.proto
crates/xds/proto/service/secret/v1/: sds.pb.go  sds.proto  sds_grpc.pb.go
crates/xds/proto/type/matcher/v1/: regex.pb.go  regex.proto
crates/xds/src/: client.rs  lib.rs  proto.rs  source.rs
examples/: backend.yaml  config.yaml  crds.yaml  dxgate.yaml  kgate.yaml  rbac.yaml
ui/: admin.html
