[workspace]
members = [
    "crates/admin",
    "crates/app",
    "crates/controller",
    "crates/core",
    "crates/proxy",
    "crates/xds",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/kdubbo/dxgate"
rust-version = "1.76"

[workspace.dependencies]
async-trait = "0.1"
axum = "0.6"
clap = { version = "4.5", features = ["derive", "env"] }
http = "0.2"
hyper = { version = "0.14", features = ["client", "http1", "http2", "server", "stream", "tcp"] }
hyper-rustls = { version = "0.24", default-features = false, features = ["http1", "http2", "logging", "tls12", "tokio-runtime", "webpki-roots"] }
futures-util = "0.3"
jsonwebtoken = "9"
k8s-openapi = { version = "0.22", features = ["v1_29"] }
kube = { version = "0.91", default-features = false, features = ["client", "derive", "rustls-tls"] }
opentelemetry = "0.23"
opentelemetry-otlp = { version = "0.16", features = ["tonic"] }
opentelemetry_sdk = { version = "0.23", features = ["rt-tokio"] }
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustls-pemfile = "1"
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
prost = "0.12"
prost-types = "0.12"
thiserror = "1"
tokio = { version = "1", features = ["fs", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = "0.1"
tonic = { version = "0.11", features = ["transport"] }
tonic-build = "0.11"
tracing = "0.1"
tracing-opentelemetry = "0.24"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
