[package]
name = "kgate-admin"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
kgate-core = { path = "../core" }
kgate-proxy = { path = "../proxy" }
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
