[package]
name = "dxgate-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "dxgate"
path = "src/main.rs"

[dependencies]
dxgate-admin = { path = "../admin" }
dxgate-core = { path = "../core" }
dxgate-proxy = { path = "../proxy" }
dxgate-xds = { path = "../xds" }
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
