[package]
name = "dxgate-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "dxgate"
path = "src/main.rs"

[dependencies]
dxgate-admin = { path = "../admin" }
dxgate-controller = { path = "../controller" }
dxgate-core = { path = "../core" }
dxgate-proxy = { path = "../proxy" }
dxgate-xds = { path = "../xds" }
clap.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
http.workspace = true
hyper.workspace = true
serde_json.workspace = true
