[package]
name = "dxgate-proxy"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
dxgate-core = { path = "../core" }
axum.workspace = true
http.workspace = true
hyper.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
