[package]
name = "dxgate-proxy"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
dxgate-core = { path = "../core" }
axum.workspace = true
http.workspace = true
hyper.workspace = true
hyper-rustls.workspace = true
jsonwebtoken.workspace = true
opentelemetry.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true

[dev-dependencies]
opentelemetry_sdk.workspace = true
rcgen = "0.12"
tokio-rustls = "0.24"
tokio-stream = { workspace = true, features = ["net"] }
tonic.workspace = true
tonic-health = "0.11"
